fix(ci): update build script

--- a/web/package.json
+++ b/web/package.json
@@ -5,7 +5,7 @@
     "type": "module",
     "scripts": {
         "dev": "VITE_BUILD_FOR=browser vite",
-        "build": "VITE_BUILD_FOR=server vite build"
+        "build": "VITE_BUILD_FOR=server vite build",
         "build:browser": "VITE_BUILD_FOR=browser vite build"
     },
     "dependencies": {
