--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,7 +28,7 @@ jobs:
       - uses: pnpm/action-setup@v4
         name: Install pnpm
         with:
-          version: 9
+          version: 10
           run_install: false
 
       - name: Install Node.js
@@ -38,9 +38,11 @@ jobs:
           cache: "pnpm"
 
       - name: Install dependencies
-        run: cd web && pnpm install
+        working-directory: ./web
+        run: pnpm install
 
       - name: Build
+        working-directory: ./web
         run: pnpm build:browser
 
       - name: Setup Pages
