--- a/web/package.json
+++ b/web/package.json
@@ -4,9 +4,9 @@
     "version": "0.0.0",
     "type": "module",
     "scripts": {
-        "dev": "VITE_BUILD_FOR=browser vite",
-        "build": "VITE_BUILD_FOR=server vite build",
-        "build:browser": "VITE_BUILD_FOR=browser vite build"
+        "dev": "VITE_BUILD_FOR=browser vite --config vite.server.js",
+        "build": "VITE_BUILD_FOR=server vite build --config vite.server.js",
+        "build:web": "VITE_BUILD_FOR=browser vite build --config vite.browser.js"
     },
     "dependencies": {
         "lakelib": "^0.4.0",
