--- a/web/package.json
+++ b/web/package.json
@@ -6,7 +6,8 @@
     "scripts": {
         "dev": "VITE_BUILD_FOR=browser vite --config vite.server.js",
         "build": "VITE_BUILD_FOR=server vite build --config vite.server.js",
-        "build:browser": "VITE_BUILD_FOR=browser vite build --config vite.browser.js"
+        "build:browser": "VITE_BUILD_FOR=browser vite build --config vite.browser.js",
+        "format": "prettier src --write"
     },
     "dependencies": {
         "lakelib": "^0.4.0",
@@ -20,6 +21,7 @@
         "@vitejs/plugin-vue": "^5.2.2",
         "autoprefixer": "^10.4.21",
         "postcss": "^8.5.3",
+        "prettier": "^3.7.4",
         "tailwindcss": "3",
         "vite": "^6.3.1",
         "vite-plugin-minify": "^2.1.0"
